--- a/react-tribute-page/paulwalker/package.json
+++ b/react-tribute-page/paulwalker/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.2.0",
     "react-image": "^1.3.1",
     "react-scripts": "1.1.1",
+    "react-table": "^6.8.0",
     "w3-css": "^4.0.4"
   },
   "scripts": {
